--- a/package.json
+++ b/package.json
@@ -1,38 +1,27 @@
 {
-  "name": "signature-app",
+  "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/23-shreshta/signature-app.git"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/23-shreshta/signature-app/issues"
-  },
-  "homepage": "https://github.com/23-shreshta/signature-app#readme",
-  "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.10"
-  },
+  "description": "",
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
-    "@mui/icons-material": "^5.17.1",
-    "@mui/material": "^5.17.1",
-    "bcryptjs": "^3.0.2",
+    "@pdf-lib/fontkit": "^1.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^17.0.1",
+    "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "pdfjs-dist": "^3.11.174",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-pdf": "^9.2.1"
+    "mongodb-memory-server": "^10.1.4",
+    "mongoose": "^8.16.1",
+    "multer": "^2.0.1",
+    "pdf-lib": "^1.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
